# xrootd

./: CMakeLists.txt  a.out  bat0.c  config.h  init.c  inotify.c  notify.c  readme.md  xsetroot.c  xtest.c
